# stash-api

./: .dockerignore  .env.example  Dockerfile  entrypoint.py  main.py  pyproject.toml
app/core/: config.py
app/http/api/v1/: hello_world.py
app/http/middleware/: add_process_time.py
app/routes/api/: api_v1.py
app/routes/base/: health_check.py
