[tool.poetry]
name = "stash-api"
version = "0.1.0"
description = ""
authors = ["Andika Ahmad Ramadhan <a.ramadhan@gdn-commerce.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
gunicorn = "^20.1.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
